# Nuit-de-l-info-12-2019

./: Imageaccueil.xcf  README.md  connexion.css  connexion.html
Resources/: FAQ  Simulation
Services/python-flask-server/: README.md  setup.py
Services/python-flask-server/swagger_server/: __main__.py
Services/python-flask-server/swagger_server/controllers/: utilisateur_controller.py
Services/python-flask-server/swagger_server/models/: __init__.py  changer.py  info.py  login.py  user.py
Services/python-flask-server/swagger_server/swagger/: swagger.yaml
Services/python-flask-server/swagger_server/test/: test_utilisateur_controller.py
Services/rust/: .env  Cargo.toml
Services/rust/migrations/2019-12-05-202830_create_surveys/: down.sql  up.sql
Services/rust/migrations/2019-12-05-202830_create_surveys/src/: schema.rs
Services/rust/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
View/: api.js  connex.html  connexion.html  faq.html  handle.js  index.html  inscription.html  lang.js  style.css
