[package]
name = "surkek"
version = "0.1.0"
authors = ["Gilles Mertens <gilles.mertens@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "*"
rocket_codegen = "*"
diesel = { version = "1.4.6", features = ["mysql", "r2d2"] }
dotenv = "0.9.0"
serde = "*"
serde_derive = "*"
